--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -8,4 +8,10 @@
     <string name="Register">حفظ</string>
     <string name="patient">طلب دم</string>
     <string name="dooner">متبرع بالدم</string>
+    <string name="name_dooner">اسم المتبرع</string>
+    <string name="age_dooner">العمر</string>
+    <string name="gender_dooner">الجنس</string>
+    <string name="blood_group">فصيلة الدم</string>
+    <string name="address">العنوان</string>
+    <string name="city">المدينه</string>
 </resources>
