--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="Register">حفظ</string>
     <string name="patient">طلب دم</string>
     <string name="dooner">متبرع بالدم</string>
+    <string name="name_dooner">اسم المتبرع</string>
+    <string name="age_dooner">العمر</string>
+    <string name="gender_dooner">الجنس</string>
+    <string name="blood_group">فصيلة الدم</string>
+    <string name="address">العنوان</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="city">المدينه</string>
 </resources>
